SMP-14 add/update <disributionManagement>,<pluginRepositories>, <repostories>, <reporting> etc.
git-svn-id: https://source.sakaiproject.org/svn/maven2/trunk@71011 66ffb92e-73f9-0310-93c1-f5514f145a0a